employee-backend/src/main/openshift/employee-backend-service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: employee-backend
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: com.example.finesmart
  name: employee-backend
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: employee-backend
    provider: jkube
    group: com.example.finesmart
