employee-backend/src/main/openshift/employee-backend-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: employee-backend
    provider: jkube
    version: 1.0.0-SNAPSHOT
    group: com.example.finesmart
  name: employee-backend
spec:
  tls:
    termination: edge
  port:
    targetPort: 8080
  to:
    kind: Service
    name: employee-backend
